--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
   --accent-gray-color-300: #cbd5e1;
   --accent-gray-color-200: #e2e8f0;
   --accent-gray-color-100: #f1f5f9;
-  --accent-gray-color-50: #f8fafc;
+  --accent-gray-color-50: #f3f3f3;
 
   /* ================= TYPHOGRAFY  */
   --font-primary: 'Poppins', sans-serif;
@@ -74,6 +74,8 @@
   --radius-2xl: 5rem;
 }
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -84,6 +86,7 @@
   background: none;
   color: var(--accent-gray-color-700);
   text-decoration: none;
+  line-height: var(--line-height-normal);
 }
 
 html {
@@ -104,12 +107,20 @@ body {
   height: 7rem;
   width: 100%;
   z-index: 999;
-  background-color: var(--accent-gray-color-50);
+  /* background-color: var(--accent-gray-color-50); */
+  background-color: rgba(255, 255, 255, 0.815);
   padding: 1rem 2rem;
-  box-shadow: 0 0 1rem 1rem #c7d2fe3d
+  /* box-shadow: 0 0 1rem 1rem #c7d2fe3d; */
+  backdrop-filter: blur(5rem);
+  transition: all 0.3s;
+  z-index: 9999999999;
 }
 
-.main-header .logo img {
+.top-header {
+  top: -7rem;
+}
+
+.logo img {
   width: 5rem;
 }
 
@@ -166,7 +177,7 @@ body {
 
 /* STYLING THE HERO SECTION */
 .hero-section {
-  background-color: var(--accent-blue-color-50);
+  background-color: var(--accent-red-color-50);
   width: 100%;
   height: 100dvh;
   background-image: radial-gradient(var(--accent-blue-color-300) 1px, transparent 0), radial-gradient(var(--accent-blue-color-300) 1px, transparent 0);
@@ -191,6 +202,7 @@ body {
   font-weight: var(--font-weight-black);
   letter-spacing: var(--letter-spacing-wide);
   margin-bottom: 3rem;
+  line-height: var(--line-height-tight);
 }
 
 .hero-section h2 span {
@@ -212,29 +224,72 @@ body {
   padding: 1.5rem 7rem;
   font-size: var(--font-size-md);
   color: var(--accent-gray-color-50);
-  border-radius: var(--radius-2xl);
   cursor: pointer;
   transition: all 0.3s;
   position: relative;
   z-index: 999;
+  border-radius: var(--radius-2xl);
+
+  overflow: hidden;
+}
+
+.btn:active {
+  transform: translateY(0.5rem);
+}
+
+.btn::after {
+  content: '';
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  border-radius: var(--radius-2xl);
+  opacity: 0.3;
+  transition: all 0.3s;
 }
 
 .btn-primary {
   background-color: var(--accent-red-color-500);
 }
 
-.btn-primary:hover {
-  box-shadow: 0 0 0.5rem var(--accent-gray-color-700);
-}
+/* .btn-primary:hover {} */
 
 .btn-secondary {
   background-color: var(--accent-gray-color-200);
   color: var(--accent-gray-color-700);
 }
 
-.btn-primary:hover {
+.btn-primary:hover::after {
+  width: 100%;
   background-color: var(--accent-red-color-600);
 }
+
+.btn-secondary:hover::after {
+  width: 100%;
+  background-color: var(--accent-red-color-600);
+}
+
+.btn-scroll-top {
+  position: fixed;
+  bottom: 5rem;
+  right: 2rem;
+  background-color: var(--accent-red-color-600);
+  width: 5rem;
+  font-size: var(--font-size-lg);
+  height: 5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-scroll-top svg {
+  stroke: var(--accent-gray-color-50);
+}
+
+/* TRUSTED BY */
 
 .trusted-by {
   display: flex;
@@ -250,7 +305,7 @@ body {
 
 .section-header span {
   display: inline-block;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   font-size: 1.4rem;
   background-color: var(--accent-blue-color-50);
   border-radius: var(--radius-sm);
@@ -376,13 +431,14 @@ body {
   padding: 4rem;
   position: relative;
   background-color: var(--accent-blue-color-50);
-
 }
 
 .vision-box h4 {
-  font-weight: var(--font-weight-bold);
   margin-bottom: 1rem;
+  font-size: var(--font-size-lg);
   color: var(--accent-gray-color-950);
+  font-weight: var(--font-weight-bold);
+
 }
 
 .section-vision .left span {
@@ -401,4 +457,79 @@ body {
   font-size: var(--font-size-1xl);
   font-weight: var(--font-weight-black);
   color: var(--accent-gray-color-300);
+}
+
+/*  CTA*/
+.cta-section {
+  background-color: var(--accent-red-color-600);
+  min-height: 40rem;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  border-radius: var(--radius-2xl);
+  overflow: hidden;
+}
+
+.cta-content {
+  padding: 6rem;
+}
+
+.cta-section h3 {
+  font-size: var(--font-size-2xl);
+  color: var(--accent-blue-color-50);
+  margin-bottom: 2rem;
+}
+
+.cta-img {
+  background: linear-gradient(to left, #dc262600, #dc2626), url('/images/hero.jpeg');
+  width: 100%;
+  height: 100%;
+  /* background-color: #1d4ed8; */
+  background-size: cover;
+}
+
+/* HOME TRUSTED BY */
+.home-trusted-by {
+  background-color: var(--accent-red-color-50);
+}
+
+footer {
+  background-color: var(--accent-gray-color-950);
+  padding: 6rem 2rem;
+}
+
+footer h1 {
+  color: var(--accent-gray-color-50);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--accent-red-color-100);
+  font-size: 2.4rem;
+}
+
+footer img {
+  filter: invert(1);
+}
+
+footer nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+  color: var(--accent-gray-color-100);
+
+}
+
+footer nav ul a {
+  color: var(--accent-gray-color-500);
+}
+
+footer nav ul a:hover {
+  color: var(--accent-gray-color-50);
+}
+
+footer p {
+  text-align: center;
+  margin-top: 3rem;
 }
